Fix UI overflow

--- a/src/style.css
+++ b/src/style.css
@@ -59,6 +59,7 @@ body {
   position: absolute;
   left: -100%;
   transition: all 2s;
+  display: none;
 }
 
 h1,
@@ -286,7 +287,7 @@ button:hover {
   cursor: pointer;
 }
 
-button:active {
+button:active:not(#restart) {
   position: relative;
   left: 3px;
   top: 2px;
